--- a/Week3/index.html
+++ b/Week3/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--   Russell Gaspard     		 -->
-<!--   ASD 1307, Project 2 	     -->
+<!--   ASD 1307, Project 3 	     -->
 <!--   Mobile Development 	     -->
 <!--   Full Sail University 	 -->
 <html>
@@ -15,8 +15,8 @@
 	<meta http-equiv="cleartype" content="on"/>
 	
 	<!-- StyleSheets -->
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.min.css" />
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+	<link rel="stylesheet" href="css/jquery.mobile.structure-1.3.1.min.css" />
+	<link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 
 	<!-- Modernizr  -->
@@ -179,7 +179,7 @@
 
 	<!-- JavaScript -->
 	<script src="js/libs/jquery-2.0.3.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+	<script src="js/libs/jquery.mobile-1.3.1.min.js"></script>
 	<script src="js/libs/jquery.validate.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
