--- a/asdcouch/asdcouch/app/_attachments/index.html
+++ b/asdcouch/asdcouch/app/_attachments/index.html
@@ -19,8 +19,22 @@
 	<link rel="stylesheet" href="jquery.mobile-1.3.1.min.css" />
 	<link href="style.css" rel="stylesheet" type="text/css" />
 
-	<!-- Modernizr  -->
+	<!-- JS Scripts  -->
 	<script src="modernizr.custom.min.js"></script>
+
+	<!-- JavaScript -->
+	<script src="jquery-2.0.3.min.js"></script>
+	<script src="jquery-migrate-1.0.0.js"></script>
+	
+	<script src="jquery.mobile-1.3.1.min.js"></script>
+	<script src="jquery.validate.min.js"></script>
+	<script src="jquery.couch.js"></script>	
+
+	<!-- <script src="jquery-1.8.3.min.js"></script> -->
+	<!-- <script src="jquery-2.0.3.min.js"></script> -->
+	<!-- <script src="jquery-migrate-1.0.0.js"></script> -->
+
+
 
 	<title>Band Mates</title>
 </head>
@@ -178,9 +192,10 @@
 	</div>
 
 	<!-- JavaScript -->
-	<script src="jquery-2.0.3.min.js"></script>
-	<script src="jquery.mobile-1.3.1.min.js"></script>
-	<script src="jquery.validate.min.js"></script>
+	<!-- <script src="jquery-2.0.3.min.js"></script> -->
+	<!-- <script src="jquery.mobile-1.3.1.min.js"></script> -->
+	<!-- <script src="jquery.validate.min.js"></script> -->
+	<!-- <script src="jquery.couch.js"></script> -->
 	<script src="main.js"></script>
 </body>
 </html>
