--- a/asdcouch/asdcouch/app/_attachments/detail.html
+++ b/asdcouch/asdcouch/app/_attachments/detail.html
@@ -46,7 +46,7 @@
 				<nav data-role="navbar">
 					<ul>
 						<li><a href="#" data-icon="plus" id="editNav">Edit</a></li>
-						<li><a href="#" data-icon="gear" id="deleteNav">Delete</a></li>
+						<li><a href="index.html" data-icon="gear" id="deleteNav">Delete</a></li>
 					</ul>
 				</nav>
 			</footer>
